Fixed right next overflow on navbar.

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -20,3 +20,7 @@
   padding-right: 15px;
   padding-left: 15px;
 }
+
+.navbar-nav.navbar-right:last-child{
+	margin-right: 30px !important;
+}
